# waitress_systemd

./: .gitignore  COPYING.txt  MANIFEST.in  README.rst  black.toml  setup.cfg  tox.ini
examples/firestarter/: README.rst  example_app.py  firestarter.toml  pastedeploy.ini
tests/: test_fd_to_socket.py
waitress_systemd/: __init__.py  raw_socket.py
