[metadata]
name = waitress_systemd
version = 0.1.dev0
author = OCHIAI, Gouji
author_email = gjo.ext@gmail.com
url = https://github.com/gjo/waitress_systemd
description = systemd socket support for waitress
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = MIT
license_file = COPYING.txt
platform = any
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = true
install_requires =
  waitress
packages = find:
python_requires = >=3.4
zip_safe = false

[options.packages.find]
exclude =
  examples
  tasks
  tests

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
  PKG-INFO
  *.egg-info
  *.egg-info/*

[coverage:run]
source =
  waitress_systemd
  tests

[flake8]
ignore =
;  # E203: whitespace before ':' (black fails to be PEP8 compliant)
;  E203
;  # E731: do not assign a lambda expression, use a def
;  E731
;  # W503: line break before binary operator (flake8 is not PEP8 compliant)
;  W503
;  # W504: line break after binary operator (flake8 is not PEP8 compliant)
;  W504
exclude =
  .tox
  .venv
  build
  dist
show-source = True
